Solved Issue #24: When a route has no route performances, display a message to user

--- a/config/locales/en/translations.yml
+++ b/config/locales/en/translations.yml
@@ -84,6 +84,7 @@ en:
         safety_index: "Safety"
       timings:
         title: "Timings on this route"
+        empty: "No one has uploaded their timings on this route yet"
         table:
           header:
             user: "User"
