Added listing of cycling-groups on landing page map

--- a/config/locales/es_mx/categories.yml
+++ b/config/locales/es_mx/categories.yml
@@ -16,3 +16,5 @@ es_MX:
       workshops:
         store: "Taller y Tienda de Bicis"
         workshop: "Taller"
+      cycling_groups:
+        title: "Grupo Ciclista"
