--- a/config/locales/en/translations.yml
+++ b/config/locales/en/translations.yml
@@ -40,6 +40,8 @@ en:
       cycling_group:
         plural: "Groups"
         singular: "Group"
+    confirmation:
+      delete: "Destroy this element?"
     landing:
       navbar:
         share_group: "Upload a ride"
@@ -56,6 +58,7 @@ en:
 
     profiles:
       cycling_on: "Riding on"
+      recent_activity: "Actividad reciente"
     events:
       last_updated: "updated"
       meeting: "Meeting at"
@@ -66,6 +69,8 @@ en:
         not_provided: "Sorry, we don't have this event exact date"
         other: "%{days} days to event"
     cycling_groups:
+      confirmation:
+        delete: "Do you want to destroy this cycling group?"
       actions:
         new: "New Group"
     parkings:
@@ -80,6 +85,8 @@ en:
         horary: "Service timings"
     routes:
       all: "See other routes"
+      confirmation:
+        delete: "Do you really want to destroy this route?"
       actions:
         new: "New Route"
         creating: "Creating Route"
