--- a/config/locales/es_mx/translations.yml
+++ b/config/locales/es_mx/translations.yml
@@ -45,6 +45,8 @@ es_MX:
       cycling_group:
         plural: "Grupos"
         singular: "Grupo"
+    confirmation:
+      delete: "¿Deseas eliminar este elemento?"
     landing:
       navbar:
         what: "Checa el video"
@@ -75,6 +77,7 @@ es_MX:
     
     profiles:
       cycling_on: "Rodando en"
+      recent_activity: "Actividad reciente"
     events:
       meeting: "Cita a las"
       departing: "Salida a las"
@@ -84,7 +87,13 @@ es_MX:
         not_provided: "No tenemos la fecha exacta de este evento"
         other: "%{days} días para este evento"
     cycling_groups:
+      confirmation:
+        delete: "¿Deseas eliminar este grupo ciclista?"
       views:
+        updated:
+          success: "Grupo ciclista actualizado correctamente"
+        created:
+          success: "Grupo ciclista creado correctamente"
         form:
           picture_note: "Selecciona un logo para tu grupo"
       actions:
@@ -102,6 +111,8 @@ es_MX:
         horary: "Horario de Servicio"
     routes:
       all: "Ver otras rutas"
+      confirmation:
+        delete: "¿Deseas eliminar esta ruta?"
       actions:
         new: "Nueva Ruta"
         creating: "Creando Ruta"
@@ -115,8 +126,8 @@ es_MX:
         created:
           successfully: "Ruta creada correctamente"
         updated:
-          successfully: "Esta ruta fué actualizada correctamente"
-          unsuccessfully: "Esta ruta no pudo ser actualizada"
+          successfully: "La ruta fué actualizada correctamente"
+          unsuccessfully: "La ruta no pudo ser actualizada"
       rankings:
         none: "Sin rankings aún"
         some: "%{value} rankings"
