Solved Issue #36: Add internationalized titles to routes and cycling groups edit/new forms

--- a/config/locales/es_mx/cycling_groups.yml
+++ b/config/locales/es_mx/cycling_groups.yml
@@ -1,4 +1,10 @@
 es_MX:
+  app:
+    cycling_groups:
+      new:
+        title: "Nuevo grupo ciclista"
+      edit:
+        title: "Editar grupo ciclista"
   activerecord:
     models:
       cycling_group: "Grupo ciclista"
