Solved Issue #35: Add actions on navbar on map layout and the Wikicleta logo at the left

--- a/config/locales/es_mx/cycle_paths.yml
+++ b/config/locales/es_mx/cycle_paths.yml
@@ -3,7 +3,7 @@ es_MX:
     cycle_paths:
       details:
         one_way:
-          true: "De un sentido"
+          true: "De un sentido (El pin es el origen)"
           false: "De doble sentido"
       confirmation:
         delete: "¿Deseas eliminar esta ciclovia?"
