Solved Issue #39: Fix settings page UIX and include link from user profile page

--- a/config/locales/es_mx/profiles.yml
+++ b/config/locales/es_mx/profiles.yml
@@ -1,6 +1,10 @@
 es_MX:
   app:
     profiles:
+      settings: 
+        title: "Preferencias"
+        basics:
+          title: "Ajuste de preferencias de perfil"
       navbar: 
         explore: "Explora"
         new_route: "Trazar ruta"
