Contribution to Issue #40: Redesign of landing page, still remains to work on three important sections

--- a/config/locales/es_mx/categories.yml
+++ b/config/locales/es_mx/categories.yml
@@ -2,11 +2,11 @@ es_MX:
   app:
     categories:
       tips:
-        title: "Recomendación"
+        title: "Tip"
         categories:
-          alert: "Sugerencia"
-          danger: "Peligro"
-          sightseeing: "Para ver"
+          alert: "Recomendación"
+          danger: "Punto de riesgo"
+          sightseeing: "Para visitar en bici"
       parkings:
         title: "Bici-estacionamiento"
         kinds:
