Solved Issue #41: Integrated Trips section to new UIX design

--- a/config/locales/en/translations.yml
+++ b/config/locales/en/translations.yml
@@ -33,6 +33,7 @@ en:
       discover: "Discover"
       close_session: "Logout"
       login: "Login"
+      curated_trips: "Curated trips"
     models:
       route:
         plural: "Routes"
