--- a/config/locales/es_mx/profiles.yml
+++ b/config/locales/es_mx/profiles.yml
@@ -13,3 +13,4 @@ es_MX:
         settings: "Preferencias"
         sign_out: "Salir"
         sign_in: "Entrar"
+        curated_trips: "Paseos curados"
