Solved Issue #46: A user should be able to see his trails from his profile and see his stats there

--- a/config/locales/es_mx/profiles.yml
+++ b/config/locales/es_mx/profiles.yml
@@ -1,6 +1,10 @@
 es_MX:
   app:
     profiles:
+      performance:
+        distance: "recorridos"
+        speed: "velocidad promedio"
+        trace: "tus recorridos"
       settings: 
         title: "Preferencias"
         basics:
