--- a/config/locales/es_mx/defaults.yml
+++ b/config/locales/es_mx/defaults.yml
@@ -9,6 +9,8 @@
 # Corrected by Eloy Serra Labán: http://goo.gl/i9Kts, /nQ928, /XfKaX
 
 es_MX:
+  actions:
+    locate_me: " Ubicarme"
   number:
     percentage:
       format:
