Added message on reset tracking number box when number is empty. Related to commit #64

--- a/config/locales/es_mx/tracking.yml
+++ b/config/locales/es_mx/tracking.yml
@@ -4,6 +4,7 @@ es_MX:
       title: "Pedal Path"
       searching: "Buscando"
       seek: "Ubica a alguien por su código lock"
+      empty: "No tienes un número de seguimiento"
       instant_info:
         reloader: "Actualizar ubicación"
       not_found:
